--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </h1>
         <hr
             style="height: 2px;border-width: 0;color:rgb(241, 49, 81); background-color: rgb(245, 71, 100); width: 100%;">
-        <center><img src="images/Myphoto.jpg" alt="Myphoto.jpg"
+        <center><img src="Iumages/Myphoto.jpg" alt="Myphoto.jpg"
                 style="width: 200px; height: 200px; border-radius:70%; color: rgb(241, 49, 81);"></center>
         <p>
             <center><b> Nang Kyawt Hsu Hlaing </b> <br> Fronted Developer</br>
